# poem-template

./: .env  Cargo.toml  README.md
migrations/: 20221213143158_init.down.sql  20221213143158_init.up.sql
src/: main.rs  router.rs
src/apis/: mod.rs  user.rs
src/init/: database.rs  mod.rs  redis.rs  tracing.rs
src/middleware/: log.rs  mod.rs  response.rs
src/model/: mod.rs
src/model/database/: user.rs
src/model/request/: user.rs
src/model/response/: mod.rs
src/service/: user.rs
