[package]
name = "poem-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
chrono = "0.4.23"
dotenv = "0.15.0"
poem = "1.3.50"
redis = { version = "0.22.1", features = ["tokio-comp"] }
serde = { version = "1.0.150", features = ["derive"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "any"] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.5.9"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.16"
